<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HelloWorld</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_name">Please type in your name:</string>
    <string name="hello_button">Hello!</string>
    <string name="hint_enter_name">Enter here</string>
    <string name="button_cancel">Cancel</string>
    <string name="field_Hello">Hello!</string>
    <string name="button_exit">Exit</string>
    <string name="button_list">Countries</string>
    <string-array name="list_countries">
		<item>section:A</item>
        <item>Afghanistan</item>

        <item>Albania</item>

        <item>Algeria</item>

        <item>American Samoa</item>

        <item>Andorra</item>

        <item>Angola</item>

        <item>Anguilla</item>

        <item>Antarctica</item>

        <item>Antigua and Barbuda</item>

        <item>Argentina</item>

        <item>Armenia</item>

        <item>Aruba</item>

        <item>Australia</item>

        <item>Austria</item>

        <item>Azerbaijan</item>

        <item>section:B</item>
        
        <item>Bahamas</item>

        <item>Bahrain</item>

        <item>Bangladesh</item>

        <item>Barbados</item>

        <item>Belarus</item>

        <item>Belgium</item>

        <item>Belize</item>

        <item>Benin</item>

        <item>Bermuda</item>

        <item>Bhutan</item>

        <item>Bolivia</item>

        <item>Bosnia and Herzegovina</item>

        <item>Botswana</item>

        <item>Brazil</item>

        <item>Brunei Darussalam</item>

        <item>Bulgaria</item>

        <item>Burkina Faso</item>

        <item>Burundi</item>

        <item>section:C</item>
        
        <item>Cambodia</item>

        <item>Cameroon</item>

        <item>Canada</item>

        <item>Cape Verde</item>

        <item>Cayman Islands</item>

        <item>Central African Republic</item>

        <item>Chad</item>

        <item>Chile</item>

        <item>China</item>

        <item>Christmas Island</item>

        <item>Cocos (Keeling) Islands</item>

        <item>Colombia</item>

        <item>Comoros</item>
        
        <item>Democratic Republic of the Congo (Kinshasa)</item>

        <item>Congo, Republic of(Brazzaville)</item>

        <item>Cook Islands</item>

        <item>Costa Rica</item>

        <item>Ivory Coast</item>

        <item>Croatia</item>

        <item>Cuba</item>

        <item>Cyprus</item>

        <item>Czech Republic</item>

        <item>section:D</item>
        
        <item>Denmark</item>

        <item>Djibouti</item>

        <item>Dominica</item>

        <item>Dominican Republic</item>

       	<item>section:E</item>
        
        <item>East Timor (Timor-Leste)</item>

        <item>Ecuador</item>

        <item>Egypt</item>

        <item>El Salvador</item>

        <item>Equatorial Guinea</item>

        <item>Eritrea</item>

        <item>Estonia</item>

        <item>Ethiopia</item>

        <item>section:F</item>
        
        <item>Falkland Islands</item>

        <item>Faroe Islands</item>

        <item>Fiji</item>

        <item>Finland</item>

        <item>France</item>

        <item>French Guiana</item>

        <item>French Polynesia</item>

        <item>French Southern Territories</item>

        <item>section:G</item>
        
        <item>Gabon</item>

        <item>Gambia</item>

        <item>Georgia</item>

        <item>Germany</item>

        <item>Ghana</item>

        <item>Gibraltar</item>

        <item>Great Britain</item>

        <item>Greece</item>

        <item>Greenland</item>

        <item>Grenada</item>

        <item>Guadeloupe</item>

        <item>Guam</item>

        <item>Guatemala</item>

        <item>Guinea</item>

        <item>Guinea-Bissau</item>

        <item>Guyana</item>

        <item>section:H</item>
        
        <item>Haiti</item>

        <item>Holy See</item>

        <item>Honduras</item>

        <item>Hong Kong</item>

        <item>Hungary</item>

        <item>section:I</item>
        
        <item>Iceland</item>

        <item>India</item>

        <item>Indonesia</item>

        <item>Iran (Islamic Republic of)</item>

        <item>Iraq</item>

        <item>Ireland</item>

        <item>Israel</item>

        <item>Italy</item>

        <item>section:J</item>
        
        <item>Jamaica</item>

        <item>Japan</item>

        <item>Jordan</item>

        <item>section:K</item>
        
        <item>Kazakhstan</item>

        <item>Kenya</item>

        <item>Kiribati</item>

        <item>Korea, Democratic People\'s Rep. (North Korea)</item>

        <item>Korea, Republic of (South Korea)</item>

        <item>Kosovo</item>

        <item>Kuwait</item>

        <item>Kyrgyzstan</item>

        <item>section:L</item>
        
        <item>Lao, People\'s Democratic Republic</item>

        <item>Latvia</item>

        <item>Lebanon</item>

        <item>Lesotho</item>

        <item>Liberia</item>

        <item>Libya</item>

        <item>Liechtenstein</item>

        <item>Lithuania</item>

        <item>Luxembourg</item>

        <item>section:M</item>
        
        <item>Macau</item>

        <item>Macedonia, Rep. of</item>

        <item>Madagascar</item>

        <item>Malawi</item>

        <item>Malaysia</item>

        <item>Maldives</item>

        <item>Mali</item>

        <item>Malta</item>

        <item>Marshall Islands</item>

        <item>Martinique</item>

        <item>Mauritania</item>

        <item>Mauritius</item>

        <item>Mayotte</item>

        <item>Mexico</item>

        <item>Micronesia, Federal States of</item>

        <item>Moldova, Republic of</item>

        <item>Monaco</item>

        <item>Mongolia</item>

        <item>Montenegro</item>

        <item>Montserrat</item>

        <item>Morocco</item>

        <item>Mozambique</item>

        <item>Myanmar, Burma</item>

        <item>section:N</item>
        
        <item>Namibia</item>

        <item>Nauru</item>

        <item>Nepal</item>

        <item>Netherlands</item>

        <item>Netherlands Antilles</item>

        <item>New Caledonia</item>

        <item>New Zealand</item>

        <item>Nicaragua</item>

        <item>Niger</item>

        <item>Nigeria</item>

        <item>Niue</item>

        <item>Northern Mariana Islands</item>

        <item>Norway</item>

        <item>section:O</item>
        
        <item>Oman</item>

        <item>section:P</item>
        
        <item>Pakistan</item>

        <item>Palau</item>

        <item>Palestinian territories</item>

        <item>Panama</item>

        <item>Papua New Guinea</item>

        <item>Paraguay</item>

        <item>Peru</item>

        <item>Philippines</item>

        <item>Pitcairn Island</item>

        <item>Poland</item>

        <item>Portugal</item>

        <item>Puerto Rico</item>

        <item>section:Q</item>
        
        <item>Qatar</item>

        <item>section:R</item>
        
        <item>Reunion Island</item>

        <item>Romania</item>

        <item>Russian Federation</item>

        <item>Rwanda</item>

        <item>section:S</item>
        
        <item>Saint Kitts and Nevis</item>

        <item>Saint Lucia</item>

        <item>Saint Vincent and the Grenadines</item>

        <item>Samoa</item>

        <item>San Marino</item>

        <item>Sao Tome and Principe</item>

        <item>Saudi Arabia</item>

        <item>Senegal</item>

        <item>Serbia</item>

        <item>Seychelles</item>

        <item>Sierra Leone</item>

        <item>Singapore</item>

        <item>Slovakia (Slovak Republic)</item>

        <item>Slovenia</item>

        <item>Solomon Islands</item>

        <item>Somalia</item>

        <item>South Africa</item>

        <item>South Sudan</item>

        <item>Spain</item>

        <item>Sri Lanka</item>

        <item>Sudan</item>

        <item>Suriname</item>

        <item>Swaziland</item>

        <item>Sweden</item>

        <item>Switzerland</item>

        <item>Syria, Syrian Arab Republic</item>

        <item>section:T</item>
        
        <item>Taiwan (Republic of China)</item>

        <item>Tajikistan</item>

        <item>Tanzania; officially the United Republic of Tanzania</item>

        <item>Thailand</item>

        <item>Tibet</item>

        <item>Timor-Leste (East Timor)</item>

        <item>Togo</item>

        <item>Tokelau</item>

        <item>Tonga</item>

        <item>Trinidad and Tobago</item>

        <item>Tunisia</item>

        <item>Turkey</item>

        <item>Turkmenistan</item>

        <item>Turks and Caicos Islands</item>

        <item>Tuvalu</item>

        <item>section:U</item>
        
        <item>Uganda</item>

        <item>Ukraine</item>

        <item>United Arab Emirates</item>

        <item>United Kingdom</item>

        <item>United States</item>

        <item>Uruguay</item>

        <item>Uzbekistan</item>

        <item>section:V</item>
        
        <item>Vanuatu</item>

        <item>Vatican City State (Holy See)</item>

        <item>Venezuela</item>

        <item>Vietnam</item>

        <item>Virgin Islands (British)</item>

        <item>Virgin Islands (U.S.)</item>

        <item>section:W</item>
        
        <item>Wallis and Futuna Islands</item>

        <item>Western Sahara</item>

        <item>section:X</item>
        
        <item>section:Y</item>
        
        <item>Yemen</item>

        <item>section:Z</item>
        
        <item>Zambia</item>

        <item>Zimbabwe</item>

    </string-array>
    <string-array name="list_continents">
        <item >North America</item>
        <item >South America</item>
        <item >Asia</item>
        <item >Africa</item>
        <item >Australia</item>
        <item >Antartica</item>
        <item >Europe</item>
    </string-array>
    <string-array name="list_icons">
        <item >argentina_flag_icon</item>
        <item >australia_flag_icon</item>
        <item >bahamas_flag_icon</item>
        <item >brazil_flag_icon</item>
        <item >france_flag_icon</item>
        <item >italy_flag_icon</item>
        <item >norway_flag_icon</item>
        <item >south_africa_flag_icon</item>
        <item >usa_flag_icon</item>
        <item >vietnam_flag_icon</item>
    </string-array>
    <string name="button_ok">OK</string>
    <plurals name="ask_for_a_number">
        <item quantity="zero">No buttons.</item>
        <item quantity="one">One button.</item>
        <item quantity="other">%d buttons.</item>
    </plurals>
    <string name="textview_name">Jerico D. delos Santos</string>
    <string name="textview_ask_number">Please enter a number</string>
    <string name="button_askNumber">Ask A Number</string>
    <string name="button_employee">Employees</string>
    <string-array name="last_name_list">
        <item >Abad</item>
        <item >Bondad</item>
        <item >Cortez</item>
        <item >De Leon</item>
        <item >Estrada</item>
        <item >Filomeno</item>
        <item >Garcia</item>
        <item >Hombres</item>
        <item >Ilao</item>
        <item >Jamias</item>
    </string-array>
    <string-array name="first_name_list">
        <item >Ben</item>
        <item >Olga</item>
        <item >Victor</item>
        <item >Abel</item>
        <item >Susan</item>
        <item >Helen</item>
        <item >Pam</item>
        <item >Celine</item>
        <item >Xander</item>
        <item >Yeng</item>
    </string-array>
    <integer-array name="id_number_list">
        <item >123</item>
        <item >543</item>
        <item >363</item>
        <item >987</item>
        <item >236</item>
        <item >095</item>
        <item >643</item>
        <item >262</item>
        <item >777</item>
        <item >590</item>
    </integer-array>
    <string name="button_sort">Sort</string>
  

</resources>
