<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.helloworld.MainActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_enter_name" />

    <Button
        android:id="@+id/ask_a_number"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/button_askNumber"/>

    <include
        android:id="@+id/include1"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        layout="@layout/application_footer" />

    <Button
        android:id="@+id/listButton"
        android:layout_width="160dp"
        android:layout_height="335dp"
        android:layout_alignRight="@+id/nameEditText"
        android:layout_below="@+id/nameEditText"
        android:text="@string/button_list"
        android:textSize="20sp"
        android:drawableTop="@drawable/star_button"
        android:gravity="center"/>

    <Button
        android:id="@+id/helloButton"
        android:layout_width="160dp"
        android:layout_height="335dp"
        android:layout_alignLeft="@+id/nameEditText"
        android:layout_alignTop="@+id/listButton"
        android:drawableTop="@drawable/star_button"
        android:gravity="center"
        android:text="@string/hello_button"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ask_a_number"
        android:layout_below="@+id/ask_a_number"
        android:layout_marginTop="21dp"
        android:text="@string/enter_name" />

    <Button
        android:id="@+id/employee_button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/ask_a_number"
        android:layout_alignBottom="@+id/ask_a_number"
        android:layout_alignRight="@+id/textView1"
        android:text="@string/button_employee" />

</RelativeLayout>